# sleek

./: .example.env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
sleek/: main.py  settings.py
sleek/db/migrations/: env.py
sleek/db/migrations/versions/: b5cfccfdbaf0_added_canvas_data_column_to_room_table.py  b7a00185e0fa_added_canvas_data_column_to_room_table.py  e16ad218dbc5_room_model_loaded.py
sleek/db/models/: __init__.py  room.py
